# DrinkAlarm

./: .gitattributes  .gitignore  .gitmodules  README.md  sdkconfig  sdkconfig.old
3DModel/: OLED.SLDASM  Type-C_Ext.SLDASM  上盖.SLDPRT  外壳.SLDPRT
PCB/MainBoard/DrinkAlarm/: AutoDownload.SchDoc  DrinkAlarm.OutJob  DrinkAlarm.PrjPcb  DrinkAlarm.PrjPcbStructure  Power.SchDoc  main.SchDoc
PCB/Type-C_Ext/: Type-C_Ext.kicad_pcb  Type-C_Ext.kicad_prl  Type-C_Ext.kicad_pro  Type-C_Ext.kicad_sch  Type-C_Ext.wrl
components/GUIGuider/: CMakeLists.txt  GUIGuider.guiguider
components/GUIGuider/custom/: custom.c  custom.h
components/GUIGuider/lvgl/: lvgl.mk
components/GUIGuider/lvgl-simulator/: Makefile  main.c
components/GUIGuider/lvgl-simulator/lv_drivers/display/: pro_name.h
components/GUIGuider/lvgl/src/extra/: extra.mk
components/GUIGuider/temp/: board.h  conf.json  simulator.h
components/OLED/: CMakeLists.txt  oled.c  oled.cpp  oled.h  oledfont.c  oledfont.h
components/Peripheral/: CMakeLists.txt  io_config.h  peripheral_init.c  peripheral_init.h
components/alarm/: CMakeLists.txt  alarm.cpp  alarm.h
components/time_sync/: CMakeLists.txt  time_sync.c  time_sync.h
components/u8g2_port/: CMakeLists.txt  u8g2_port.cpp  u8g2_port.h
components/wifi_smartconfig/: CMakeLists.txt  wifi_smartconfig.c  wifi_smartconfig.h
main/: CMakeLists.txt  alarm.cpp  alarm.h  arduino_main.cpp  arduino_main.h  idf_main.c  io_config.h  lvgl_port.cpp  lvgl_port.h  time_sync.c  time_sync.h  u8g2_port.cpp  u8g2_port.h  wifi_smartconfig.c  wifi_smartconfig.h
(+17 files in other folders)
