idf_component_register(
        SRC_DIRS
        "generated/guider_customer_fonts"
        "generated/guider_fonts"
        "generated/images"
        "generated"
        "custom"

        INCLUDE_DIRS
        "generated/guider_customer_fonts"
        "generated/guider_fonts"
        "generated/images"
        "generated"
        "custom"

        REQUIRES
        lvgl
)